syntax = "proto3";

package graphql.api;

import "google/protobuf/empty.proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc check(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}